src/pages/messaging/customer-chat-api/v3.7/rtm-reference/index.mdx
---
weight: 31
category: "messaging"
subcategory: "customer-chat-api"
title: "RTM API Reference"
tagline: "Interact with the chat as a customer."
desc: "Use the Customer Chat Real-Time Messaging API to interact as a customer."
apiVersion: "3.7"
robots: "noindex"
---

import { openChatWindow } from "utils/index";

# Introduction

## Versioning

This document describes the **Customer Chat Real-Time Messaging API v3.7**. This is the developer preview version that provides a preview of the upcoming changes to the API. **It's not open to public use.** However, if you want to test some features, contact us at developers@text.com or <a href="#open-chat" onClick={openChatWindow}>ask on the chat</a>, and we'll give you access. [Read more about versioning...](/messaging/#api-versioning)

## What is RTM API

Real-Time Messaging API (RTM API) is based on a websocket-like connection. Client can send a **request message** that results in getting a **response message**. It's also possible to get **push messages**.

## When to use RTM API

If you're wondering which API to use - Customer Chat **RTM API** or **Web API**, keep on reading.

**Real-Time Messaging API** allows for building stateful integrations that require **logging in** and **maintaining the connection**. Since connection maintenance is required, the implementation might be more challenging than with Web API.

Customer Chat RTM API enables communication in real time. It supports pushes like `sneak peek`, `typing indicator`, and other. Web API doesn’t have equivalent webhooks, which means you won't be informed about certain events using Web API.

Also, the RTM API will be a better choice if you want to avoid time delays or presume significant traffic.

**Not what you're looking for?** Perhaps, you need to use [**Customer Chat Web API**](..) instead.

## Access

The basics on authorization and server pinging in the Customer Chat RTM API.

### Authorization

**Customer authorization** is handled with access tokens. Find out how to get an **access token** from [Customer authorization flow](/authorization/customer-authorization). You need to authorize within 30 seconds from establishing the connection. Otherwise, the connection will be closed. Given that the connection is continuosly maintained, you only need to authorize once.

### Server pinging

After successful authorization, the client needs to **ping the server** every 15 seconds. Otherwise, the connection will be closed after about 30 seconds of inactivity. Until authorization is completed, ping is a no-op.

Use one of these 2 ways of pinging the server:

- **Protocol message with the ping action**

For web applications and backend integrations (e.g. in Python, Go). Send the following request every 15 seconds:

```json
{
  "action": "ping",
  "payload": {}
}
```

After pinging the server, the client will receive a response with the `ping` action. Thanks to that, the client can make sure the connection is still alive.

- **The control frame ping in the websocket protocol**

For backend integrations; unavailable in web browsers. Read more about the [control frame ping](https://tools.ietf.org/html/rfc6455#section-5.5.2).

## Pagination

Pagination is a mechanism that allows splitting the database output into more manageable chunks of data.
Based on the `limit` and `sort order` parameters, pagination is able to decide how many records will be returned at once and whether it should fetch the oldest or the latest data first.

Any filters that could be applied should be provided in first pagination request. In the response, you'll get the `next_page_id` and `previous_page_id` parameters.
You should make the subsequent request using one of these parameters as `page_id`, depending on the direction of iteration: forward or backward.

The `filters`, `limit`, and `sort_order` parameters can't be provided along with `page_id`.

💡 The maximum duration of the `page_id` parameter before it expires is one month.

# Data structures

To find sample payloads of **events**, **users**, and **other common structures** such as chats or threads [visit the Data structures](/messaging/customer-chat-api/v3.7/data-structures) document.

# Methods

| The API endpoint                                 |
| ------------------------------------------------ |
| `wss://api.livechatinc.com/v3.7/customer/rtm/ws` |

When connecting to the Customer Chat RTM API, clients have to send over the required query string parameters.

| Required parameter | Data type |
| ------------------ | :-------: |
| `organization_id`  | `string`  |

<Section>

<Text>

## Available methods

|                |                                                                                                                                                                                                                                                                                                                                     |
| -------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Chats**      | [`list_chats`](#list-chats) [`list_threads`](#list-threads) [`get_chat`](#get-chat) [`start_chat`](#start-chat) [`resume_chat`](#resume-chat) [`deactivate_chat`](#deactivate-chat)                                                                                                                                                 |
| **Events**     | [`send_event`](#send-event) [`delete_event`](#delete-event) [`send_rich_message_postback`](#send-rich-message-postback) [`send_sneak_peek`](#send-sneak-peek)                                                                                                                                                                       |
| **Properties** | [`update_chat_properties`](#update-chat-properties) [`delete_chat_properties`](#delete-chat-properties) [`update_thread_properties`](#update-thread-properties) [`delete_thread_properties`](#delete-thread-properties) [`update_event_properties`](#update-event-properties) [`delete_event_properties`](#delete-event-properties) |
| **Customers**  | [`update_customer`](#update-customer) [`update_customer_page`](#update-customer-page) [`set_customer_session_fields`](#set-customer-session-fields) [`get_customer`](#get-customer)                                                                                                                                                 |
| **Status**     | [`login`](#login) [`list_group_statuses`](#list-group-statuses)                                                                                                                                                                                                                                                                     |
| **Other**      | [`get_form`](#get-form) [`get_url_info`](#get-url-info) [`mark_events_as_seen`](#mark-events-as-seen) [`accept_greeting`](#accept-greeting) [`cancel_greeting`](#cancel-greeting) [`request_welcome_message`](#request-welcome-message) [`send_greeting_button_clicked`](#send-greeting-button-clicked)                             |

</Text>

<Code>

<CodeSample path={'GENERAL RTM API REQUEST FORMAT'}>

```json
{
  "version": "<api_version>", // optional, defaults to the version of the RTM connection; versions lower than the version of the RTM connection are prohibited
  "request_id": "<request_id>", // optional
  "action": "<action>",
  "payload": {
  // optional
  }
}
```

</CodeSample>

<CodeResponse title={'GENERAL RTM API RESPONSE FORMAT'}>

```json
{
  "request_id": "<request_id>", // optional
  "action": "<action>",
  "type": "response",
  "success": true,
  "payload": {
  // optional
  }
}
```

</CodeResponse>

</Code>

</Section>

## Chats

<Section>

<Text>

### List Chats

It returns [info](/messaging/customer-chat-api/v3.7/data-structures/#chat-info) about the chats a customer participated in.

#### Specifics

|                        |                                                               |
| ---------------------- | ------------------------------------------------------------- |
| **Action**             | `list_chats`                                                  |
| **Web API equivalent** | [`list_chats`](/messaging/customer-chat-api/v3.7/#list-chats) |
| **Push message**       | -                                                             |

#### Request

| Parameter    | Required | Type     | Notes                                                                                                                 |
| ------------ | -------- | -------- | --------------------------------------------------------------------------------------------------------------------- |
| `limit`      | No       | `number` | The maximum number of records returned on each [page](#pagination). Default: 10. Maximum: 25.                         |
| `sort_order` | No       | `string` | Possible values: `asc`, `desc` (default). The chat info entries are sorted by the creation date of their last thread. |
| `page_id`    | No       | `string` |                                                                                                                       |

#### Response

| Field              | Data type | Notes                                                                                                           |
| ------------------ | --------- | --------------------------------------------------------------------------------------------------------------- |
| `total_chats`      | `number`  | An estimated number. The real number of found chats can slightly differ.                                        |
| `next_page_id`     | `string`  | In relation to `page_id` specified in the request. Appears in the response only when there's the next page.     |
| `previous_page_id` | `string`  | In relation to `page_id` specified in the request. Appears in the response only when there's the previous page. |
| `chats_info`       | `array`   | An array of [chat info](/messaging/customer-chat-api/v3.7/data-structures/#chat-info) data structures.          |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "list_chats",
  "payload": {}
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "list_chats",
  "type": "response",
  "success": true,
  "payload": {
    "next_page_id": "MTUxNzM5ODEzMTQ5Ng==",
    "chats_info": [{
      "id": "PJ0MRSHTDG",
      "last_thread_info": {
        "id": "K600PKZON8",
        "created_at": "2020-05-08T08:22:21.128420Z",
        "last_event_per_type": {
          "message": {
            "id": "Q298LUVPRH_1",
            "created_at": "2019-12-09T12:01:18.909000Z",
            "type": "message",
            "text": "hello world",
            "author_id": "b7eff798-f8df-4364-8059-649c35c9ed0c"
          }
        }
      },
      "users": [{
        "id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
        "type": "customer",
        "present": true
      }, {
        "id": "b5657aff34dd32e198160d54666df9d8",
        "name": "Agent Smith",
        "type": "agent",
        "present": true,
        "avatar": "https://example.com/avatar.png",
        "job_title": "Support Agent"
      }],
      "access": {
        "group_ids": [0]
      },
      "properties": {
        // "Properties" object
      },
      "active": true
    }],
    "total_chats": 1
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>
<Text>

### List Threads

It returns threads that the current customer has access to in a given chat.

#### Specifics

|                        |                                                                   |
| ---------------------- | ----------------------------------------------------------------- |
| **Action**             | `list_threads`                                                    |
| **Web API equivalent** | [`list_threads`](/messaging/customer-chat-api/v3.7/#list-threads) |
| **Push message**       | -                                                                 |

#### Request

| Parameter          | Required | Data type | Notes                                                                                                                                                                                                                                                                   |
| ------------------ | -------- | --------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `chat_id`          | Yes      | `string`  |                                                                                                                                                                                                                                                                         |
| `sort_order`       | No       | `string`  | Possible values: `asc` - oldest threads first and `desc` - newest threads first (default).                                                                                                                                                                              |
| `limit`            | No       | `number`  | The maximum number of records returned on each [page](#pagination). Default: 3. Maximum: 100.                                                                                                                                                                           |
| `page_id`          | No       | `string`  |                                                                                                                                                                                                                                                                         |
| `min_events_count` | No       | `number`  | Specifies the minimum number of events to be returned in the response. It's the **total** number of events, so they can come from more than one thread. You'll get as many latest threads as needed to meet the `min_events_count` condition. Minimum: 1. Maximum: 100. |

You cannot use both `limit` and `min_events_count` at the same time.

</Text>
<Code>
<CodeSample path={'REQUEST'}>

```shell
{
  "action": "list_threads",
    "payload": {
      "chat_id": "PWJ8Y4THAV"
    }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>",
  "action": "get_chat",
  "type": "response",
  "success": true,
  "payload": {
    "threads": [{
      "id": "K600PKZON8",
      "created_at": "2019-12-17T07:57:41.512000Z",
      "active": true,
      "user_ids": [
        "b7eff798-f8df-4364-8059-649c35c9ed0c",
        "bbb67d600796e9f277e360e842418833"
      ],
      "events": [{
        "id": "Q20N9CKRX2_1",
        "created_at": "2019-12-17T07:57:41.512000Z",
        "recipients": "all",
        "type": "message",
        "text": "Hello",
        "author_id": "bbb67d600796e9f277e360e842418833"
      }],
      "properties": {
        // "Property" object
      },
      "access": {
        "group_ids": [0]
      },
      "previous_thread_id": "K600PKZOM8", // optional
      "next_thread_id": "K600PKZOO8" // optional
    }],
    "found_threads": 42,
    "next_page_id": "MTUxNzM5ODEzMTQ5Ng==", // optional
    "previous_page_id": "MTUxNzM5ODEzMTQ5Nw==" // optional
  }
}
```

</CodeResponse>

</Code>
</Section>

<Section>

<Text>

### Get Chat

#### Specifics

|                        |                                                           |
| ---------------------- | --------------------------------------------------------- |
| **Action**             | `get_chat`                                                |
| **Web API equivalent** | [`get_chat`](/messaging/customer-chat-api/v3.7/#get-chat) |
| **Push message**       | -                                                         |

#### Request

| Parameter   | Required | Data type | Notes                                   |
| ----------- | -------- | --------- | --------------------------------------- |
| `chat_id`   | Yes      | `string`  |                                         |
| `thread_id` | No       | `string`  | Default: the latest thread (if exists). |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "get_chat",
  "payload": {
    "chat_id": "PJ0MRSHTDG",
    "thread_id": "K600PKZON8"
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>",
  "action": "get_chat",
  "type": "response",
  "success": true,
  "payload": {
    "id": "PJ0MRSHTDG",
    "thread": {
      "id": "K600PKZON8",
      "created_at": "2020-05-07T07:11:28.288340Z",
      "active": true,
      "user_ids": [
        "b7eff798-f8df-4364-8059-649c35c9ed0c",
        "b5657aff34dd32e198160d54666df9d8"
      ],
      "events": [{
        "id": "Q20N9CKRX2_1",
        "created_at": "2019-12-17T07:57:41.512000Z",
        "type": "message",
        "text": "Hello",
        "author_id": "b5657aff34dd32e198160d54666df9d8"
      }],
      "properties": {
        "0805e283233042b37f460ed8fbf22160": {
          "string_property": "string_value"
        }
      },
      "access": {
        "group_ids": [0]
      },
      "previous_thread_id": "K600PKZOM8",
      "next_thread_id": "K600PKZOO8"
    },
    "users": [{
      "id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
      "type": "customer",
      "present": true
    }, {
      "id": "b5657aff34dd32e198160d54666df9d8",
      "name": "Agent Smith",
      "type": "agent",
      "present": true,
      "avatar": "https://example.com/avatar.jpg",
      "job_title": "Support Agent"
    }],
    "access": {
      "group_ids": [0]
    },
    "properties": {
      "0805e283233042b37f460ed8fbf22160": {
        "string_property": "string_value"
      }
    }
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### Start Chat

Starts a chat.

The method updates the requester's `events_seen_up_to` as if they've seen all chat events.

#### Specifics

|                        |                                                                                |
| ---------------------- | ------------------------------------------------------------------------------ |
| **Action**             | `start_chat`                                                                   |
| **Web API equivalent** | [`start_chat`](/messaging/customer-chat-api/v3.7/#start-chat)                  |
| **Push message**       | [`incoming_chat`](/messaging/customer-chat-api/v3.7/rtm-pushes/#incoming_chat) |

#### Request

| Parameter                | Required | Data type | Notes                                                                                                                                                    |
| ------------------------ | -------- | --------- | -------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `chat`                   | No       | `object`  |                                                                                                                                                          |
| `chat.properties`        | No       | `object`  | The initial chat properties.                                                                                                                             |
| `chat.access`            | No       | `object`  | Chat access to set. Default: all agents.                                                                                                                 |
| `chat.users`             | No       | `array`   | A list of existing users. Only one user is allowed (type `customer`).                                                                                    |
| `chat.thread`            | No       | `object`  |                                                                                                                                                          |
| `chat.thread.events`     | No       | `array`   | An array of the initial chat [events](/messaging/customer-chat-api/data-structures/#events). Does not support the `form` type event in the LiveChat app. |
| `chat.thread.properties` | No       | `object`  | The initial thread properties.                                                                                                                           |
| `active`                 | No       | `bool`    | If set to `false`: creates an inactive thread. Default: `true`.                                                                                          |
| `continuous`             | No       | `bool`    | If set to `true`: starts the chat as continuous (online group is not required). Default: `false`.                                                        |

#### Response

| Field       | Data type  | Notes                                                                                                                                                                   |
| ----------- | ---------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `chat_id`   | `string`   |                                                                                                                                                                         |
| `thread_id` | `string`   |                                                                                                                                                                         |
| `event_ids` | `[]string` | Returned only when the chat was started with initial events. Returns only the IDs of user-generated events; server-side generated events are not included in the array. |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "start_chat",
  "payload": {}
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "start_chat",
  "type": "response",
  "success": true,
  "payload": {
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "PGDGHT5G"
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### Resume Chat

Restarts an archived chat.

The method updates the requester's `events_seen_up_to` as if they've seen all chat events.

#### Specifics

|                        |                                                                                |
| ---------------------- | ------------------------------------------------------------------------------ |
| **Action**             | `resume_chat`                                                                  |
| **Web API equivalent** | [`resume_chat`](/messaging/customer-chat-api/v3.7/#resume-chat)                |
| **Push message**       | [`incoming_chat`](/messaging/customer-chat-api/v3.7/rtm-pushes/#incoming_chat) |

#### Request

| Parameter                | Required | Type     | Notes                                                                                        |
| ------------------------ | -------- | -------- | -------------------------------------------------------------------------------------------- |
| `chat`                   | Yes      | `object` |                                                                                              |
| `chat.id`                | Yes      | `string` | The ID of the chat that will be resumed.                                                     |
| `chat.access`            | No       | `object` | The chat access to set. Default: all agents.                                                 |
| `chat.properties`        | No       | `object` | The initial chat properties.                                                                 |
| `chat.thread`            | No       | `object` |                                                                                              |
| `chat.thread.events`     | No       | `array`  | An array of the initial chat events.                                                         |
| `chat.thread.properties` | No       | `object` | The initial thread properties.                                                               |
| `active`                 | No       | `bool`   | If set to `false`: creates an inactive thread. Default: `true`.                              |
| `continuous`             | No       | `bool`   | If set to `true`: sets a chat to the continuous mode. When unset, leaves the mode unchanged. |

#### Response

| Field       | Data type  | Notes                                                                                                                                                                   |
| ----------- | ---------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `thread_id` | `string`   |                                                                                                                                                                         |
| `event_ids` | `[]string` | Returned only when the chat was resumed with initial events. Returns only the IDs of user-generated events; server-side generated events are not included in the array. |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "resume_chat",
  "payload": {
  "chat": {
    "id": "PWJ8Y4THAV"
  }
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "resume_chat",
  "type": "response",
  "success": true,
  "payload": {
  "thread_id": "Z8AGR5OUW"
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### Deactivate Chat

Deactivates a chat by closing the currently open thread. Sending messages to this thread will no longer be possible.

#### Specifics

|                        |                                                                                                                                                                           |
| ---------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Action**             | `deactivate_chat`                                                                                                                                                         |
| **Web API equivalent** | [`deactivate_chat`](/messaging/customer-chat-api/v3.7/#deactivate-chat)                                                                                                   |
| **Push message**       | [`incoming_event`](/messaging/customer-chat-api/v3.7/rtm-pushes/#incoming_event) and [`chat_deactivated`](/messaging/customer-chat-api/v3.7/rtm-pushes/#chat_deactivated) |

#### Request

| Parameter | Required | Data type | Notes |
| --------- | -------- | --------- | ----- |
| `id`      | Yes      | `string`  |       |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "deactivate_chat",
  "payload": {
  "id": "PJ0MRSHTDG"
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "deactivate_chat",
  "type": "response",
  "success": true,
  "payload": {
  // no response payload
  }
}
```

</CodeResponse>

</Code>

</Section>

## Events

<Section>

<Text>

### Send Event

Sends an [Event](/messaging/customer-chat-api/v3.7/data-structures/#events) object. Use this method to send a message by specifying the [Message](/messaging/customer-chat-api/v3.7/data-structures/#message) event type in the request.

The method updates the requester's `events_seen_up_to` as if they've seen all chat events.

#### Specifics

|                        |
| ---------------------- | -------------------------------------------------------------------------------- |
| **Action**             | `send_event`                                                                     |
| **Web API equivalent** | [`send_event`](/messaging/customer-chat-api/v3.7/#send-event)                    |
| **Push message**       | [`incoming_event`](/messaging/customer-chat-api/v3.7/rtm-pushes/#incoming_event) |

#### Request

| Parameter               | Required | Data type | Notes                                                                                                                                                                               |
| ----------------------- | -------- | --------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `chat_id`               | Yes      | `string`  | The ID of the chat you want to send the message to.                                                                                                                                 |
| `event`                 | Yes      | `object`  | An [event](/messaging/customer-chat-api/data-structures/#events) object. Does not support the `form` type event in the LiveChat app.                                                |
| `attach_to_last_thread` | No       | `bool`    | The flag is ignored for active chats. For inactive chats: if set to `true`: the event will be added to the last thread. If set to `false`: the request will fail. Default: `false`. |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "send_event",
  "payload": {
  "chat_id": "PW94SJTGW6",
  "event": {
    "type": "message",
    "text": "hello world",
    "recipients": "all"
  }
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "send_event",
  "type": "response",
  "success": true,
  "payload": {
   "event_id": "K600PKZON8"
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### Delete Event

Deletes an [Event](/messaging/customer-chat-api/v3.7/data-structures/#events) object. Deleted events are hidden from all Customer Chat API responses but remain visible via the Agent Chat API.

In the Agent Chat API, the [Delete Event](#delete-event) method replaces the original event with a [Deleted Event](/messaging/agent-chat-api/v3.7/data-structures#deleted-event) for agents with the `normal` role. Agents with higher roles (`administrator`, `viceowner`, and `owner`) see the original event with a `deleted` flag.

#### Specifics

|                        |
| ---------------------- | ------------------------------------------------------------------------------ |
| **Action**             | `delete_event`                                                                 |
| **Web API equivalent** | [`delete_event`](/messaging/customer-chat-api/v3.7/#delete-event)              |
| **Push message**       | [`event_deleted`](/messaging/customer-chat-api/v3.7/rtm-pushes/#event_deleted) |

#### Request

| Parameter   | Required | Data type | Notes                                                       |
| ----------- | -------- | --------- | ----------------------------------------------------------- |
| `chat_id`   | Yes      | `string`  | The ID of the chat that you want to delete an event from.   |
| `thread_id` | Yes      | `string`  | The ID of the thread that you want to delete an event from. |
| `event_id`  | Yes      | `string`  | The ID of the event that you want to delete.                |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "delete_event",
  "payload": {
    "chat_id": "123-123-123-123",
    "thread_id": "E2WDHA8A",
    "event_id": "E2WDHA8A_4"
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "delete_event",
  "type": "response",
  "success": true,
  "payload": {
  //no response payload
  }
}
```

</CodeResponse>

</Code>

</Section>


<Section>

<Text>

### Send Rich Message Postback

#### Specifics

|                        |                                                                                                                        |
| ---------------------- | ---------------------------------------------------------------------------------------------------------------------- |
| **Action**             | `send_rich_message_postback`                                                                                           |
| **Web API equivalent** | [`send_rich_message_postback`](/messaging/customer-chat-api/v3.7/#send-rich-message-postback)                          |
| **Push message**       | [`incoming_rich_message_postback`](/messaging/customer-chat-api/v3.7/rtm-pushes/#incoming_rich_message_postback)**\*** |

**\*)** `incoming_rich_message_postback` will be sent only for active threads.

#### Request

| Parameter                       | Required | Data type | Notes                                       |
| ------------------------------- | -------- | --------- | ------------------------------------------- |
| `chat_id`                       | Yes      | `string`  |                                             |
| `event_id`                      | Yes      | `string`  |                                             |
| `postback`                      | Yes      | `object`  |                                             |
| `postback.id`                   | Yes      | `string`  | The postback name of the button.            |
| `postback.toggled`              | Yes      | `bool`    | Whether the postback is toggled.            |
| `postback.button_type`          | No       | `string`  |                                             |
| `postback.button_value`         | No       | `string`  |                                             |
| `postback.ecommerce`            | No       | `object`  |                                             |
| `postback.ecommerce.product_id` | No       | `string`  | Required when sending `postback.ecommerce`. |
| `postback.ecommerce.option_id`  | No       | `string`  |                                             |
| `postback.ecommerce.quantity`   | No       | `number`  |                                             |
| `thread_id`                     | Yes      | `string`  |                                             |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "send_rich_message_postback",
  "payload": {
  "chat_id": "PJ0MRSHTDG",
  "thread_id": "K600PKZON8",
  "event_id": "a0c22fdd-fb71-40b5-bfc6-a8a0bc3117f7",
  "postback": {
    "id": "Method URL_yes",
    "toggled": true
  }
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "send_rich_message_postback",
  "type": "response",
  "success": true,
  "payload": {
  //no response payload
  }
}
```

</CodeResponse>

</Code>

</Section>

<!-- > **`send_rich_message_postback`** sample **request** with optional params

```json
{
  "request_id": "125", // optional
  "action": "send_rich_message_postback",
  "payload": {
    "chat_id": "PJ0MRSHTDG",
    "thread_id": "K600PKZON8",
    "event_id": "a0c22fdd-fb71-40b5-bfc6-a8a0bc3117f7",
    "postback": {
      "id": "Method URL_yes",
      "toggled": true,
      "button_type": "url",
      "button_value": "https://www.livechat.com",
      "ecommerce": {
        "product_id": "12345",
        "option_id": "red-xl",
        "quantity": 1
      }
    }
  }
}
``` -->

<Section>

<Text>

### Send Sneak Peek

Sends a sneak peek to a chat.

#### Specifics

|                        |                                                                         |
| ---------------------- | ----------------------------------------------------------------------- |
| **Action**             | `send_sneak_peek`                                                       |
| **Web API equivalent** | [`send_sneak_peek`](/messaging/customer-chat-api/v3.7/#send-sneak-peek) |
| **Push message**       | -                                                                       |

#### Request

| Parameter         | Required | Data type | Notes                                       |
| ----------------- | -------- | --------- | ------------------------------------------- |
| `chat_id`         | Yes      | `string`  | The ID of the chat to send a sneak peek to. |
| `sneak_peek_text` | Yes      | `string`  | The sneak peek text.                        |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "send_sneak_peek",
  "payload": {
  "chat_id": "PJ0MRSHTDG",
  "sneak_peek_text": "hello world"
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "send_sneak_peek",
  "type": "response",
  "success": true,
  "payload": {
  // no response payload
  }
}
```

</CodeResponse>

</Code>

</Section>

## Properties

<Section>

<Text>

### Update Chat Properties

#### Specifics

|                        |                                                                                                    |
| ---------------------- | -------------------------------------------------------------------------------------------------- |
| **Action**             | `update_chat_properties`                                                                           |
| **Web API equivalent** | [`update_chat_properties`](/messaging/customer-chat-api/v3.7/#update-chat-properties)              |
| **Push message**       | [`chat_properties_updated`](/messaging/customer-chat-api/v3.7/rtm-pushes/#chat_properties_updated) |

#### Request

| Parameter    | Required | Data type | Notes                                                                                                                                                                            |
| ------------ | -------- | --------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `id`         | Yes      | `string`  | The ID of the chat you to set a property for.                                                                                                                                    |
| `properties` | Yes      | `object`  | The chat properties to set. You should stick to the [general properties format](/management/configuration-api/#properties) and include _namespace_, _property name_ and _value_. |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "update_chat_properties",
  "payload": {
  "id": "Q1GZ3FNAT9",
  "properties": {
    "0805e283233042b37f460ed8fbf22160": {
      "string_property": "Chat property value updated by Customer"
      }
    }
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "update_chat_properties",
  "type": "response",
  "success": true,
  "payload": {
  // no response payload
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### Delete Chat Properties

#### Specifics

|                        |                                                                                                    |
| ---------------------- | -------------------------------------------------------------------------------------------------- |
| **Action**             | `delete_chat_properties`                                                                           |
| **Web API equivalent** | [`delete_chat_properties`](/messaging/customer-chat-api/v3.7/#delete-chat-properties)              |
| **Push message**       | [`chat_properties_deleted`](/messaging/customer-chat-api/v3.7/rtm-pushes/#chat_properties_deleted) |

#### Request

| Parameter    | Required | Data type | Notes                                                |
| ------------ | -------- | --------- | ---------------------------------------------------- |
| `id`         | Yes      | `string`  | The ID of the chat you want to delete properties of. |
| `properties` | Yes      | `object`  | The chat properties to delete.                       |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "delete_chat_properties",
  "payload": {
  "id": "Q1GZ3FNAT9",
  "properties": {
    "0805e283233042b37f460ed8fbf22160": [
      "string_property"
      ]
    }
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "delete_chat_properties",
  "type": "response",
  "success": true,
  "payload": {
  // no response payload
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### Update Thread Properties

#### Specifics

|                        |                                                                                                        |
| ---------------------- | ------------------------------------------------------------------------------------------------------ |
| **Action**             | `update_thread_properties`                                                                             |
| **Web API equivalent** | [`update_thread_properties`](/messaging/customer-chat-api/v3.7/#update-thread-properties)              |
| **Push message**       | [`thread_properties_updated`](/messaging/customer-chat-api/v3.7/rtm-pushes/#thread_properties_updated) |

#### Request

| Parameter    | Required | Data type | Notes                                                                                                                                                                            |
| ------------ | -------- | --------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `chat_id`    | Yes      | `string`  | The ID of the chat you want to set properties for.                                                                                                                               |
| `thread_id`  | Yes      | `string`  | The ID of the thread you want to set properties for.                                                                                                                             |
| `properties` | Yes      | `object`  | The chat properties to set. You should stick to the [general properties format](/management/configuration-api/#properties) and include _namespace_, _property name_ and _value_. |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "update_thread_properties",
  "payload": {
  "chat_id": "Q1GZ3FNAT9",
    "thread_id": "Q1GZ3FNAU9",
  "properties": {
    "0805e283233042b37f460ed8fbf22160": {
      "string_property": "Thread property value updated by Customer"
      }
    }
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "update_thread_properties",
  "type": "response",
  "success": true,
  "payload": {
  // no response payload
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### Delete Thread Properties

#### Specifics

|                        |                                                                                                        |
| ---------------------- | ------------------------------------------------------------------------------------------------------ |
| **Action**             | `delete_thread_properties`                                                                             |
| **Web API equivalent** | [`delete_thread_properties`](/messaging/customer-chat-api/v3.7/#delete-thread-properties)              |
| **Push message**       | [`thread_properties_deleted`](/messaging/customer-chat-api/v3.7/rtm-pushes/#thread_properties_deleted) |

#### Request

| Parameter    | Required | Data type | Notes                                                      |
| ------------ | -------- | --------- | ---------------------------------------------------------- |
| `chat_id`    | Yes      | `string`  | The ID of the chat you want to delete the properties of.   |
| `thread_id`  | Yes      | `string`  | The ID of the thread you want to delete the properties of. |
| `properties` | Yes      | `object`  | Thread properties to delete.                               |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "delete_thread_properties",
  "payload": {
  "chat_id": "Q1GZ3FNAT9",
  "thread_id": "Q1GZ3FNAU9",
  "properties": {
    "0805e283233042b37f460ed8fbf22160": [
      "string_property"
      ]
    }
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "delete_thread_properties",
  "type": "response",
  "success": true,
  "payload": {
  // no response payload
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### Update Event Properties

#### Specifics

|                        |                                                                                                      |
| ---------------------- | ---------------------------------------------------------------------------------------------------- |
| **Action**             | `update_event_properties`                                                                            |
| **Web API equivalent** | [`update_event_properties`](/messaging/customer-chat-api/v3.7/#update-event-properties)              |
| **Push message**       | [`event_properties_updated`](/messaging/customer-chat-api/v3.7/rtm-pushes/#event_properties_updated) |

#### Request

| Parameter    | Required | Data type | Notes                                                                                                                                                                            |
| ------------ | -------- | --------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `chat_id`    | Yes      | `string`  | The ID of the chat you want to set properties for.                                                                                                                               |
| `thread_id`  | Yes      | `string`  | The ID of the thread you want to set properties for.                                                                                                                             |
| `event_id`   | Yes      | `string`  | The ID of the event you want to set properties for.                                                                                                                              |
| `properties` | Yes      | `object`  | The chat properties to set. You should stick to the [general properties format](/management/configuration-api/#properties) and include _namespace_, _property name_ and _value_. |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "update_event_properties",
  "payload": {
  "chat_id": "Q1GZ3FNAT9",
  "thread_id": "Q1GZ3FNAU9",
  "event_id": "Q1GZ3FNAU9_1",
  "properties": {
    "0805e283233042b37f460ed8fbf22160": {
      "string_property": "Event property value updated by Customer"
      }
    }
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "update_event_properties",
  "type": "response",
  "success": true,
  "payload": {
  // no response payload
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### Delete Event Properties

#### Specifics

|                        |                                                                                                      |
| ---------------------- | ---------------------------------------------------------------------------------------------------- |
| **Action**             | `delete_event_properties`                                                                            |
| **Web API equivalent** | [`delete_event_properties`](/messaging/customer-chat-api/v3.7/#delete-event-properties)              |
| **Push message**       | [`event_properties_deleted`](/messaging/customer-chat-api/v3.7/rtm-pushes/#event_properties_deleted) |

#### Request

| Parameter    | Required | Data type | Notes                                                      |
| ------------ | -------- | --------- | ---------------------------------------------------------- |
| `chat_id`    | Yes      | `string`  | The ID of the chat you want to delete the properties of.   |
| `thread_id`  | Yes      | `string`  | The ID of the thread you want to delete the properties of. |
| `event_id`   | Yes      | `string`  | The ID of the event you want to delete the properties of.  |
| `properties` | Yes      | `object`  | The event properties to delete.                            |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "delete_event_properties",
  "payload": {
  "chat_id": "Q1GZ3FNAT9",
  "thread_id": "Q1GZ3FNAU9",
  "event_id": "Q1GZ3FNAU9_1",
  "properties": {
    "0805e283233042b37f460ed8fbf22160": [
      "string_property"
      ]
    }
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "delete_event_properties",
  "type": "response",
  "success": true,
  "payload": {
  // no response payload
  }
}
```

</CodeResponse>

</Code>

</Section>

## Customers

<Section>

<Text>

### Update Customer

Updates customer's fields. Allows to clear the values of `name`, `email`, `phone_number`, `suggested_email`, and `address` components by providing an empty string as the new field value.

#### Specifics

|                        |                                                                                      |
| ---------------------- | ------------------------------------------------------------------------------------ |
| **Action**             | `update_customer`                                                                    |
| **Web API equivalent** | [`update_customer`](/messaging/customer-chat-api/v3.7/#update-customer)              |
| **Push message**       | [`customer_updated`](/messaging/customer-chat-api/v3.7/rtm-pushes/#customer_updated) |

#### Request

| Parameter                                  | Required | Data type  | Notes                                                                            |
| ------------------------------------------ | -------- | ---------- | -------------------------------------------------------------------------------- |
| `name`                                     | No       | `string`   |                                                                                  |
| `email`                                    | No       | `string`   |                                                                                  |
| `suggested_email`                          | No       | `string`   | The email address suggested for the customer based on tracked activity, such as a form submission. The suggested email isn't confirmed by the customer. An empty value clears the suggestion. |
| `avatar`                                   | No       | `string`   | The URL of the customer's avatar.                                                |
| `phone_number`                             | No       | `string`   | E.164 format.                                                                    |
| `session_fields`                           | No       | `[]object` | An array of custom object-enclosed key-value pairs. Respects the order of items. |
| `omnichannel`                              | No       | `object`   |                                                                                  |
| `omnichannel.fbmessenger`                  | No       | `object`   |                                                                                  |
| `omnichannel.fbmessenger.id`               | Yes      | `string`   | Required only when `omnichannel.fbmessenger` is included.                        |
| `omnichannel.fbmessenger.name`             | No       | `string`   |                                                                                  |
| `omnichannel.fbmessenger.first_name`       | No       | `string`   |                                                                                  |
| `omnichannel.fbmessenger.last_name`        | No       | `string`   |                                                                                  |
| `omnichannel.fbmessenger.profile_pic`      | No       | `string`   |                                                                                  |
| `omnichannel.fbmessenger.gender`           | No       | `string`   |                                                                                  |
| `omnichannel.fbmessenger.locale`           | No       | `string`   |                                                                                  |
| `omnichannel.fbmessenger.is_verified_user` | No       | `bool`     |                                                                                  |
| `omnichannel.twilio`                       | No       | `object`   |                                                                                  |
| `omnichannel.twilio.phone_number`          | Yes      | `string`   | Required only when `omnichannel.twilio` is included.                             |
| `omnichannel.whatsapp`                     | No       | `object`   |                                                                                  |
| `omnichannel.whatsapp.id`                  | Yes      | `string`   | Required only when `omnichannel.whatsapp` is included.                           |
| `omnichannel.whatsapp.name`                | No       | `string`   |                                                                                  |
| `omnichannel.whatsapp.phone_number`        | Yes      | `string`   | E.164 format. Required only when `omnichannel.whatsapp` is included.             |
| `address`                                  | No       | `object`   | The customer's address.                                                          |
| `address.address`                          | No       | `string`   | The street address.                                                              |
| `address.city`                             | No       | `string`   | The city name.                                                                   |
| `address.country`                          | No       | `string`   | The country name.                                                                |
| `address.state`                            | No       | `string`   | The state name.                                                                  |
| `address.postal_code`                      | No       | `string`   | The postal code.                                                                 |

At least one optional parameter needs to be included in the request payload.

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "update_customer",
  "payload": {
  "name": "Thomas Anderson",
  "email": "t.anderson@example.com",
  "avatar": "https://example.com/avatars/1.png",
  "session_fields": [{
    "custom_key": "custom_value"
  }, {
    "another_custom_key": "another_custom_value"
  }]
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "update_customer",
  "type": "response",
  "success": true,
  "payload": {
  // no response payload
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### Update Customer Page

#### Specifics

|                        |                        |
| ---------------------- | ---------------------- |
| **Action**             | `update_customer_page` |
| **Web API equivalent** | -                      |
| **Push message**       | -                      |

Agent and referrer are updated by default using the browser’s headers.

#### Request

| Parameter | Required | Data type | Notes |
| --------- | -------- | --------- | ----- |
| `url`     | Yes      | `string`  |       |
| `title`   | No       | `string`  |       |

#### Response

| Field    | Data type | Notes                                                                                                                                                                                                                                        |
| -------- | --------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `groups` | `array`   | Optional. An array of objects with `id` and `status` properties. Present only if the customer's group assignment has changed as a result of this call. Possible statuses: `online`, `online_for_queue`, `offline`. |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "update_customer_page",
  "payload": {
  "url": "https://livechatinc.com/pricing"
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "update_customer_page",
  "type": "response",
  "success": true,
  "payload": {
    "groups": [
      {
        "id": 1,
        "status": "online"
      }
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### Set Customer Session Fields

#### Specifics

|                        |                                                                                                 |
| ---------------------- | ----------------------------------------------------------------------------------------------- |
| **Action**             | `set_customer_session_fields`                                                                   |
| **Web API equivalent** | [`set_customer_session_fields`](/messaging/customer-chat-api/v3.7/#set-customer-session-fields) |
| **Push message**       | [`customer_updated`](/messaging/customer-chat-api/v3.7/rtm-pushes/#customer_updated)            |

#### Request

| Parameter        | Required | Data type  | Notes                                                                                               |
| ---------------- | -------- | ---------- | --------------------------------------------------------------------------------------------------- |
| `session_fields` | Yes      | `[]object` | An array of custom object-enclosed key-value pairs. Respects the order of items. Maximum keys: 100. |

Agent and referrer are updated by default using the browser’s headers.

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "set_customer_session_fields",
  "payload": {
  "session_fields": [{
    "custom_key": "custom_value"
  }, {
    "another_custom_key": "another_custom_value"
  }],
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "set_customer_session_fields",
  "type": "response",
  "success": true,
  "payload": {
  // no response payload
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### Get Customer

Returns the info about the customer requesting it.

#### Specifics

|                        |                                                                   |
| ---------------------- | ----------------------------------------------------------------- |
| **Action**             | `get_customer`                                                    |
| **Web API equivalent** | [`get_customer`](/messaging/customer-chat-api/v3.7/#get-customer) |
| **Push message**       | -                                                                 |

#### Response

|                  |                                                                                                                   |
| ---------------- | ----------------------------------------------------------------------------------------------------------------- |
| `name`           | The [customer's](/messaging/customer-chat-api/v3.7/data-structures/#customer) name. Returned only if set.         |
| `email`          | The [customer's](/messaging/customer-chat-api/v3.7/data-structures/#customer) email. Returned only if set.        |
| `avatar`         | The [customer's](/messaging/customer-chat-api/v3.7/data-structures/#customer) avatar. Returned only if set.       |
| `phone_number`   | The [customer's](/messaging/customer-chat-api/v3.7/data-structures/#customer) phone number. Returned only if set. |
| `suggested_email` | The email address suggested for the [customer](/messaging/customer-chat-api/v3.7/data-structures/#customer) based on tracked activity, such as a form submission. The suggested email isn't confirmed by the customer. Returned only if set. |
| `session_fields` | An array of custom object-enclosed key-value pairs. Returned only if set. Available for the session duration.     |
| `omnichannel`    | An object of the customer's [omnichannel data](/messaging/customer-chat-api/v3.7/data-structures/#customer).      |
| `address`        | An object of the customer's address data. Returned only if set.                                                   |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "get_customer",
  "payload": {}
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "get_customer",
  "type": "response",
  "success": true,
  "payload": {
  "id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
  "type": "customer",
  "name": "Thomas Anderson", // optional
  "email": "t.anderson@example.com", // optional
  "avatar": "https://example.com/avatars/1.jpg", // optional
  "session_fields": [{ // optional
    "custom_key": "custom_value"
  }, {
    "another_custom_key": "another_custom_value"
  }]
  }
}
```

</CodeResponse>

</Code>

</Section>

## Status

<Section>

<Text>

### Login

It returns the initial state of the current customer.

#### Specifics

|                        |         |
| ---------------------- | ------- |
| **Action**             | `login` |
| **Web API equivalent** | -       |
| **Push message**       | -       |

#### Request

| Parameter                     | Required | Data type  | Notes                                                                                                                                  |
| ----------------------------- | -------- | ---------- | -------------------------------------------------------------------------------------------------------------------------------------- |
| `token`                       | Yes      | `string`   | The OAuth token from the customer's account.                                                                                           |
| `customer`                    | No       | `object`   |                                                                                                                                        |
| `customer.avatar`             | No       | `string`   | The URL of the customer's avatar.                                                                                                      |
| `customer.email`              | No       | `string`   |                                                                                                                                        |
| `customer.suggested_email`    | No       | `string`   | The email address suggested for the customer based on tracked activity, such as a form submission. The suggested email isn't confirmed by the customer. An empty value clears an existing suggestion; omit the field to leave it unchanged. |
| `customer.name`               | No       | `string`   |                                                                                                                                        |
| `customer.session_fields`     | No       | `[]object` | An array of custom object-enclosed key-value pairs. Respects the order of items.                                                       |
| `customer.address`            | No       | `object`   | The customer's address.                                                                                                                |
| `customer.address.address`    | No       | `string`   | The street address.                                                                                                                    |
| `customer.address.city`       | No       | `string`   | The city name.                                                                                                                         |
| `customer.address.country`    | No       | `string`   | The country name.                                                                                                                      |
| `customer.address.state`      | No       | `string`   | The state name.                                                                                                                        |
| `customer.address.postal_code`| No       | `string`   | The postal code.                                                                                                                       |
| `customer_page.title`         | No       | `string`   |                                                                                                                                        |
| `customer_page.url`           | No       | `string`   |                                                                                                                                        |
| `customer_side_storage`**\*** | No       | `object`   | A map in the `"key": "value"` format.                                                                                                  |
| `is_mobile`                   | No       | `bool`     | If set to `true`: indicates logging in is performed from a mobile device.                                                              |
| `group_id`                    | No       | `number`   |                                                                                                                                        |
| `referrer`                    | No       | `string`   |                                                                                                                                        |
| `application`                 | No       | `object`   | The application info.                                                                                                                  |
| `application.name`            | No       | `string`   | The application name.                                                                                                                  |
| `application.version`         | No       | `string`   | The application version.                                                                                                               |
| `application.channel_type`    | No       | `string`   | The application channel type.                                                                                                          |
| `pushes`                      | No       | `object`   | Use case: when you want to receive only specific pushes. Default: `all` for the version of your currently established RTM connection.  |
| `pushes.<version>`            | Yes      | `[]string` | A list of push subscriptions for a specific version; `<version>` is a version number, without `v` prefix. Possible values: push names. |

**\*)** We use `customer_side_storage` to keep some data on the client side. You should pass a map from the `customer_side_storage_updated` push payload to this field.

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "login",
  "payload": {
    "token": "Bearer dal:test_1fgTbfXmgthj4cZSA",
    "pushes": {
      "3.6": ["incoming_chat", "incoming_multicast"],
      "3.7": ["all"]
    }
}
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "login",
  "type": "response",
  "success": true,
  "payload": {
    "customer": {
      "id": "a0c22fdd-fb71-40b5-bfc6-a8a0bc3117f5",
      "name": "Thomas Anderson",
      "email": "t.anderson@example.com",
      "avatar": "https://example.com/avatar.png",
      "session_fields": [{
        "custom_key": "custom_value"
      }, {
        "another_custom_key": "another_custom_value"
      }],
      "statistics": {
        "chats_count": 2,
        "threads_count": 9,
        "visits_count": 15,
        "page_views_count": 40,
        "greetings_shown_count": 20,
        "greetings_accepted_count": 1
      }
    },
    "has_active_thread": true,
    "chats": [{
      "chat_id": "PJ0MRSHTDG",
      "has_unread_events": true
    }],
    "greeting": {
      "accepted": true, // customer has seen the greeting
      "id": 342543723,
      "unique_id": "e35a4fb4106d87e550fe1af480639058",
      "addon": "email",
      "subtype": "announcement",
      "is_exit_intent": false,
      "event": {
        // "Event > Message" object
        // or
        // "Event > Rich message" object
      },
      "agent": {
        "id": "b5657aff34dd32e198160d54666df9d8",
        "name": "Agent Smith",
        "type": "agent",
        "avatar": "https://example.com/avatar.png",
        "job_title": "Support Agent",
        "is_bot": false
      },
      "displayed_first_time": true
    },
    "__priv_dynamic_config": {
      "online_groups_ids": [1, 3],
      "customer_groups": {
        "monitoring": {
          "id": 1,
          "static_config_url": "/licence/1520/get_static_config.121.1808829.94.95.39446.4011.2385.398.160.552.58.337.44320.js",
          "language_config_url": "/licence/1520/v2/localization.en.121.004b8e014f50ea0c6ad6227162f7d18f_40d391a9adcdbf190e62fcd21c865bf2.js"
        }
      }
    }
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### List Group Statuses

#### Specifics

|                        |                                                                                 |
| ---------------------- | ------------------------------------------------------------------------------- |
| **Action**             | `list_group_statuses`                                                           |
| **Web API equivalent** | [`list_group_statuses`](/messaging/customer-chat-api/v3.7/#list-group-statuses) |
| **Push message**       | -                                                                               |

#### Request

| Parameter   | Required | Data type | Notes                                                      |
| ----------- | -------- | --------- | ---------------------------------------------------------- |
| `all`       | No       | `bool`    | If set to `true`: you will get statuses of all the groups. |
| `group_ids` | No       | `array`   | An array of groups' IDs.                                   |

One of the optional parameters needs to be included in the request payload.

#### Response

|                   |                                                                                                         |     |
| ----------------- | ------------------------------------------------------------------------------------------------------- | --- |
| `Group Not Found` | If you send `group_id` of a group that doesn't exist, the ID won't be included in the response payload. |     |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "list_group_statuses",
  "payload": {
  "all": true
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "list_group_statuses",
  "type": "response",
  "success": true,
  "payload": {
  "groups_status": {
    //1,2,3 are group ids, online/offline/online_for_queue are statuses of the groups

    1: "online",
    2: "offline",
    3: "online_for_queue"
  }
  }
}
```

</CodeResponse>

</Code>

</Section>

## Other

<Section>

<Text>

### Get Form

Returns an empty ticket form of a <a href="https://www.livechat.com/help/chat-surveys/" target="_blank">prechat or postchat survey</a>.

#### Specifics

|                        |                                                           |
| ---------------------- | --------------------------------------------------------- |
| **Action**             | `get_form`                                                |
| **Web API equivalent** | [`get_form`](/messaging/customer-chat-api/v3.7/#get-form) |
| **Push message**       | -                                                         |

#### Request

| Parameter  | Required | Data type | Notes                                                            |
| ---------- | -------- | --------- | ---------------------------------------------------------------- |
| `group_id` | Yes      | `number`  | The ID of the group from which you want the form.                |
| `type`     | Yes      | `string`  | The form type. Possible values: `prechat`, `postchat`, `ticket`. |

#### Response

| Field     | Notes                                                                                                                    |
| --------- | ------------------------------------------------------------------------------------------------------------------------ |
| `enabled` | If set to `false`: the `form` object is not returned (prechat or postchat survey disabled in the LiveChat Agent App UI). |
| `form`    | The [form](/messaging/customer-chat-api/v3.7/data-structures/#form) data structure.                                      |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "get_form",
  "payload": {
  "group_id": 0,
  "type": "prechat"
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "form": {
    // "Form" object
  },
  "enabled": true
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### Get URL Info

It returns the info on a given URL.

#### Specifics

|                        |                                                                   |
| ---------------------- | ----------------------------------------------------------------- |
| **Action**             | `get_url_info`                                                    |
| **Web API equivalent** | [`get_url_info`](/messaging/customer-chat-api/v3.7/#get-url-info) |
| **Push message**       | -                                                                 |

#### Request

| Parameter | Required | Data type | Notes                |
| --------- | -------- | --------- | -------------------- |
| `url`     | Yes      | `string`  | A valid website URL. |

#### Response

| Field                | Data type | Notes                                                     |
| -------------------- | --------- | --------------------------------------------------------- |
| `image_url`          | `string`  | The URL of the minified image hosted on the LiveChat CDN. |
| `image_original_url` | `string`  | The URL of the original image.                            |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "get_url_info",
  "payload": {
  "url": "https://livechatinc.com"
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "get_url_info",
  "type": "response",
  "success": true,
  "payload": {
  "title": "LiveChat | Live Chat Software and Help Desk Software",
  "description": "LiveChat - premium live chat software and help desk software for business. Over 24 000 companies from 150 countries use LiveChat. Try now, chat for free!",
  "image_url": "https://example.com/image.png",
  "image_original_url": "https://example-original-url.com/image.png",
  "image_width": 200,
  "image_height": 200,
  "url": "https://livechatinc.com"
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### Mark Events As Seen

#### Specifics

|                        |                                                                                                |
| ---------------------- | ---------------------------------------------------------------------------------------------- |
| **Action**             | `mark_events_as_seen`                                                                          |
| **Web API equivalent** | [`mark_events_as_seen`](/messaging/customer-chat-api/v3.7/#mark-events-as-seen)                |
| **Push message**       | [`events_marked_as_seen`](/messaging/customer-chat-api/v3.7/rtm-pushes/#events_marked_as_seen) |

#### Request

| Parameter    | Required | Data type | Notes                      |
| ------------ | -------- | --------- | -------------------------- |
| `chat_id`    | Yes      | `string`  |                            |
| `seen_up_to` | Yes      | `string`  | RFC 3339 date-time format. |

#### Response

No response payload (`200 OK`).

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "mark_events_as_seen",
  "payload": {
  "chat_id": "PJ0MRSHTDG",
  "seen_up_to": "2017-10-12T15:19:21.010200Z"
  }
}
```

</CodeSample>

</Code>

</Section>

<Section>

<Text>

### Accept Greeting

Marks an incoming greeting as seen.

**How it's implemented in LiveChat:**

The Chat Widget uses this method to inform that a customer has seen a greeting. Based on that, the Reports section displays the greetings
that were actually seen by Customers, not all the sent greetings. If a customer started a chat from a greeting, but the **Accept Method** wasn't executed,
the greeting is still counted as seen in Reports.

#### Specifics

|                        |                                                                                        |
| ---------------------- | -------------------------------------------------------------------------------------- |
| **Action**             | `accept_greeting`                                                                      |
| **Web API equivalent** | [`accept_greeting`](/messaging/customer-chat-api/v3.7/#accept-greeting)                |
| **Push message**       | [`greeting_accepted`](/messaging/customer-chat-api/v3.7/rtm-pushes/#greeting_accepted) |

#### Request

| Parameter     | Required | Data type | Notes                                                                                                     |
| ------------- | -------- | --------- | --------------------------------------------------------------------------------------------------------- |
| `greeting_id` | Yes      | `number`  | The ID of the greeting configured within the license to accept.                                           |
| `unique_id`   | Yes      | `string`  | The ID of the greeting to accept. You can get it from the [`incoming_greeting`](#incoming_greeting) push. |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "accept_greeting",
  "payload": {
    "greeting_id": 7,
    "unique_id": "Q10X0W041P"
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "accept_greeting",
  "type": "response",
  "payload": {
    // no response payload
  },
  "success": true
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### Cancel Greeting

Cancels a greeting (an invitation to the chat). For example, Customers could cancel greetings by minimizing the chat widget with a greeting.

#### Specifics

|                        |                                                                                        |
| ---------------------- | -------------------------------------------------------------------------------------- |
| **Action**             | `cancel_greeting`                                                                      |
| **Web API equivalent** | [`cancel_greeting`](/messaging/customer-chat-api/v3.7/#cancel-greeting)                |
| **Push message**       | [`greeting_canceled`](/messaging/customer-chat-api/v3.7/rtm-pushes/#greeting_canceled) |

#### Request

| Parameter   | Required | Data type | Notes                                                                                                     |
| ----------- | -------- | --------- | --------------------------------------------------------------------------------------------------------- |
| `unique_id` | Yes      | `string`  | The ID of the greeting to cancel. You can get it from the [`incoming_greeting`](#incoming_greeting) push. |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "cancel_greeting",
  "payload": {
    "unique_id": "Q10X0W041P"
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "cancel_greeting",
  "type": "response",
  "payload": {
  // no response payload
  },
  "success": true
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### Send Greeting Button Clicked

#### Specifics

|                        |                                                                                                   |
| ---------------------- | ------------------------------------------------------------------------------------------------- |
| **Action**             | `send_greeting_button_clicked`                                                                    |
| **Web API equivalent** | [`send_greeting_button_clicked`](/messaging/customer-chat-api/v3.7/#send-greeting-button-clicked) |
| **Push message**       | -                                                                                                 |

#### Request

| Parameter            | Required | Data type | Notes                                                                                                                                 |
| -------------------- | -------- | --------- | ------------------------------------------------------------------------------------------------------------------------------------- |
| `greeting_unique_id` | Yes      | `string`  | A unique greeting ID. You can get it from the [`incoming_greeting`](/messaging/customer-chat-api/rtm-pushes/#incoming_greeting) push. |
| `button_id`          | Yes      | `string`  | The greeting button ID.                                                                                                               |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "send_greeting_button_clicked",
  "payload": {
    "greeting_unique_id": "Q10X0W041P",
    "button_id": "20ff0b3f-fbed-49f4-b13f-788c9ec66f03"
  }
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>", // optional
  "action": "send_greeting_button_clicked",
  "type": "response",
  "payload": {
    // no response payload
  },
  "success": true
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### Request Welcome Message

Requests a welcome message from the system. The response contains the predicted agent the customer will chat with once the chat starts.

#### Specifics

|                        |                                                                                                      |
| ---------------------- | ---------------------------------------------------------------------------------------------------- |
| **Action**             | `request_welcome_message`                                                                            |
| **Web API equivalent** | [`request_welcome_message`](/messaging/customer-chat-api/v3.7/#request-welcome-message)              |
| **Push message**       | [`incoming_welcome_message`](/messaging/customer-chat-api/v3.7/rtm-pushes/#incoming_welcome_message) |

#### Request

| Parameter                 | Required | Data type | Notes                                                                                                                             |
| ------------------------- | -------- | --------- | --------------------------------------------------------------------------------------------------------------------------------- |
| `id`                      | No       | `string`  | The welcome message ID.                                                                                                           |
| `group_id`                | No       | `number`  | The ID of the group.                                                                                                              |
| `ai_agent_response_scope` | No       | `string`  | The scope of the AI agent response. Possible values: `message_and_questions`, `questions_only`. Default: `message_and_questions`. |

#### Response

| Field                       | Data type | Notes                               |
| --------------------------- | --------- | ----------------------------------- |
| `id`                        | `string`  | The welcome message ID.             |
| `predicted_agent`           | `object`  | The predicted agent info.           |
| `predicted_agent.id`        | `string`  |                                     |
| `predicted_agent.name`      | `string`  |                                     |
| `predicted_agent.avatar`    | `string`  |                                     |
| `predicted_agent.is_bot`    | `bool`    |                                     |
| `predicted_agent.bot_type`  | `string`  | Returned only for bots.             |
| `predicted_agent.job_title` | `string`  |                                     |
| `predicted_agent.type`      | `string`  |                                     |
| `queue`                     | `bool`    | If `true`, the chat will be queued. |

</Text>

<Code>

<CodeSample path={'REQUEST'}>

```json
{
  "action": "request_welcome_message",
  "payload": {}
}
```

</CodeSample>

<CodeResponse>

```json
{
  "request_id": "<request_id>",
  "action": "request_welcome_message",
  "type": "response",
  "success": true,
  "payload": {
    "id": "540eb790-17c1-47f9-9e2c-dca5a0960ab5",
    "predicted_agent": {
      "id": "b5657aff34dd32e198160d54666df9d8",
      "name": "Agent Smith",
      "avatar": "https://example.avatar/example.com",
      "is_bot": false,
      "job_title": "support hero",
      "type": "agent"
    },
    "queue": false
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

# Pushes

Here's what you need to know about **pushes**:

- They are generated primarily by RTM API actions, but also by Web API actions.
- They notify you when specific events occur.
- Can be **delivered** only in the websocket transport.
- You don't need to register pushes to receive them.
- Their equivalents in Web API are [webhooks](/management/configuration-api/v3.7/#webhooks). Pushes and webhooks have similar payloads.
- There are no retries for pushes. To determine if a customer has seen an event, compare the [event's](/messaging/customer-chat-api/v3.7/data-structures/#response) `created_at` parameter with the [customer's](/messaging/customer-chat-api/v3.7/data-structures/#customer) `events_seen_up_to` field.

<SectionLink to={"/messaging/customer-chat-api/v3.7/rtm-pushes"}>See available pushes</SectionLink>

</Text>

<Code>

<CodeResponse title={'The general push format'}>

```json
{
  "version": "<api_version>",
  "request_id": "<request_id>", // optional, applies only to the requester
  "action": "<action>",
  "type": "push",
  "payload": {
  // optional payload
  }
}
```

</CodeResponse>

</Code>

</Section>

# Errors

<CodeResponse title={'General error format'}>

```json
{
  "error": {
    "type": "misdirected_request",
    "message": "Wrong region",
    "data": {
      // optional
      "region": "dal"
    }
  }
}
```

</CodeResponse>

## Possible errors

<Errors errors="authentication,authorization,chat_anonymized,chat_inactive,customer_banned,greeting_not_found,group_not_found,group_offline,group_unavailable,groups_offline,internal,license_expired,limit_reached,not_allowed,not_found,pending_requests_limit_reached,request_timeout,service_unavailable,too_many_requests,unsupported_version,users_limit_reached,validation,wrong_product_version"/>

# Contact us

If you found a bug or a typo, you can let us know directly on GitHub.
In case of any questions or feedback, don't hesitate to contact us at [developers@text.com](mailto:developers@text.com). We'll be happy to hear from you!
